--- a/README
+++ b/README
@@ -1,8 +1,9 @@
         / Frozen Pie /
         
-“You know you have reached perfection in design, not when there is nothing more to add, but when there is nothing more to be taken away.” 
+“You know you have reached perfection in design, not when there is nothing more to add, but when 
+there is nothing more to be taken away.” 
                
-                                                                              - Antoine de Saint-Exupery
+                                                                - Antoine de Saint-Exupery
 
 
 Today's static site generators require css, markup, templating and programming skills. Their compatibility is broken. A template in one framework doesn't work in the other. You can't convert from LESS to Bourbon, from HTML to HAML, from Ruby closure to a Python inner function. You can't use Clojure's immutable collections to reimplement a default Mustache _loop_ in a straight forward way. You test on browsers, they break, like plugins that blow on your face. 
